<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hagawanet.jarvis.MainActivity">


    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/para1"
        android:layout_alignTop="@+id/para11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server11"
        android:id="@+id/para2"
        android:layout_below="@+id/para1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button1"
        android:layout_toStartOf="@+id/button1" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server21"
        android:id="@+id/para3"
        android:layout_below="@+id/para2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server31"
        android:id="@+id/para4"
        android:layout_below="@+id/para3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server41"
        android:id="@+id/para5"
        android:layout_below="@+id/para4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server51"
        android:id="@+id/para6"
        android:layout_below="@+id/para5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server61"
        android:id="@+id/para7"
        android:layout_below="@+id/para6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server71"
        android:id="@+id/para8"
        android:layout_below="@+id/para7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server81"
        android:id="@+id/para9"
        android:layout_below="@+id/para8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server91"
        android:id="@+id/para10"
        android:layout_below="@+id/para9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time"
        android:id="@+id/para11"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/para1"
        android:layout_toEndOf="@+id/para1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server101"
        android:id="@+id/para12"
        android:layout_below="@+id/para10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server111"
        android:id="@+id/para13"
        android:layout_below="@+id/para12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Server121"
        android:id="@+id/para14"
        android:layout_below="@+id/para13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para16"
        android:layout_alignTop="@+id/para3"
        android:layout_alignLeft="@+id/para15"
        android:layout_alignStart="@+id/para15" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para17"
        android:layout_alignTop="@+id/para4"
        android:layout_alignLeft="@+id/para16"
        android:layout_alignStart="@+id/para16" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Hello"
        android:id="@+id/para18"
        android:layout_below="@+id/para4"
        android:layout_alignLeft="@+id/para17"
        android:layout_alignStart="@+id/para17" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para19"
        android:layout_alignTop="@+id/para6"
        android:layout_alignLeft="@+id/para18"
        android:layout_alignStart="@+id/para18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para20"
        android:layout_below="@+id/para6"
        android:layout_alignLeft="@+id/para19"
        android:layout_alignStart="@+id/para19" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para21"
        android:layout_below="@+id/para7"
        android:layout_alignLeft="@+id/para20"
        android:layout_alignStart="@+id/para20" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para25"
        android:layout_below="@+id/para12"
        android:layout_alignLeft="@+id/para26"
        android:layout_alignStart="@+id/para26" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para26"
        android:layout_alignBaseline="@+id/para14"
        android:layout_alignBottom="@+id/para14"
        android:layout_alignLeft="@+id/para24"
        android:layout_alignStart="@+id/para24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para24"
        android:layout_below="@+id/para10"
        android:layout_alignLeft="@+id/para23"
        android:layout_alignStart="@+id/para23" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para23"
        android:layout_below="@+id/para9"
        android:layout_alignLeft="@+id/para22"
        android:layout_alignStart="@+id/para22" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para22"
        android:layout_below="@+id/para8"
        android:layout_alignLeft="@+id/para21"
        android:layout_alignStart="@+id/para21" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hello"
        android:id="@+id/para15"
        android:layout_alignTop="@+id/para2"
        android:layout_toRightOf="@+id/para3"
        android:layout_toEndOf="@+id/para3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EMERGENCY CALL"
        android:id="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
